# ZImageTurboAPI

./: .env.example  Install.txt  main.py  pyproject.toml
app/: main.py
app/services/: generator.py  model_setup.py  storage.py
