[project]
name = "zimage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "diffusers",
    "transformers",
    "accelerate",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "minio",
    "python-dotenv",
    "Pillow",
]
